[gd_scene load_steps=27 format=2]

[ext_resource path="res://Assets/UI/UI_Elements01.png" type="Texture" id=1]
[ext_resource path="res://Assets/Advokat Modern.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Script/Settings/Settings.gd" type="Script" id=3]
[ext_resource path="res://Assets/UI/UI_Banners&Headers.png" type="Texture" id=4]
[ext_resource path="res://Assets/Capitalist.ttf" type="DynamicFontData" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.988235, 0.996078, 0.839216, 1 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 412, 10, 59, 58 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 341, 9, 59, 58 )

[sub_resource type="DynamicFont" id=4]
resource_local_to_scene = true
size = 35
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 3
font_data = ExtResource( 2 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 411, 231, 18, 18 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 411, 231, 18, 18 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 4 )
region_rect = Rect2( 8, 318, 296, 43 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 4 )
region_rect = Rect2( 8, 318, 296, 43 )
modulate_color = Color( 1, 0.454902, 0.454902, 1 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 4 )
region_rect = Rect2( 8, 318, 296, 43 )
margin_left = 2.0562
modulate_color = Color( 1, 0.454902, 0.454902, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.388235, 0.423529, 0.560784, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.4, 0.4, 0.4, 1 )

[sub_resource type="Theme" id=15]
PopupMenu/colors/font_color = Color( 0, 0, 0, 1 )
PopupMenu/colors/font_color_accel = Color( 0.7, 0.7, 0.7, 0.8 )
PopupMenu/colors/font_color_disabled = Color( 0.4, 0.4, 0.4, 0.8 )
PopupMenu/colors/font_color_hover = Color( 1, 1, 1, 1 )
PopupMenu/constants/hseparation = 4
PopupMenu/constants/vseparation = 4
PopupMenu/fonts/font = null
PopupMenu/icons/checked = null
PopupMenu/icons/radio_checked = null
PopupMenu/icons/radio_unchecked = null
PopupMenu/icons/submenu = null
PopupMenu/icons/unchecked = null
PopupMenu/styles/hover = SubResource( 13 )
PopupMenu/styles/labeled_separator_left = null
PopupMenu/styles/labeled_separator_right = null
PopupMenu/styles/panel = SubResource( 14 )
PopupMenu/styles/panel_disabled = null
PopupMenu/styles/separator = null

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.992157, 0.905882, 0.509804, 1 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.992157, 0.792157, 0.509804, 1 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 1, 0.929412, 0.654902, 1 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.992157, 0.905882, 0.509804, 1 )

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0.992157, 0.792157, 0.509804, 1 )

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 1, 0.929412, 0.654902, 1 )

[sub_resource type="DynamicFont" id=21]
resource_local_to_scene = true
size = 35
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=19]
resource_local_to_scene = true
size = 15
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=20]
resource_local_to_scene = true
default_font = SubResource( 19 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.707153
margin_right = 0.707153
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
Pictures = "res://Assets/Background"

[node name="Panel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -12.0
margin_top = -7.0
margin_right = 10.0
margin_bottom = 15.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="FullScreen" type="CheckBox" parent="."]
margin_left = 908.768
margin_top = 16.0
margin_right = 975.768
margin_bottom = 82.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_icons/checked = SubResource( 2 )
custom_icons/unchecked = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
clip_text = true
align = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="FullScreen"]
margin_left = -233.811
margin_top = 11.0
margin_right = -6.81079
margin_bottom = 56.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Полный экран"

[node name="GridContainer" type="GridContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -511.0
margin_top = -288.0
margin_right = -24.0
margin_bottom = -119.0
custom_constants/vseparation = 20
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VolumeSlider" type="HSlider" parent="GridContainer"]
margin_right = 487.0
margin_bottom = 43.0
size_flags_horizontal = 3
custom_icons/grabber_highlight = SubResource( 5 )
custom_icons/grabber = SubResource( 6 )
custom_styles/slider = SubResource( 7 )
custom_styles/grabber_area_highlight = SubResource( 8 )
custom_styles/grabber_area = SubResource( 9 )
min_value = -80.0
max_value = 0.0
scrollable = false
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GridContainer/VolumeSlider"]
margin_left = -461.619
margin_top = -2.87019
margin_right = -163.619
margin_bottom = 42.1298
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Общая громкость"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicSlider" type="HSlider" parent="GridContainer"]
margin_top = 63.0
margin_right = 487.0
margin_bottom = 106.0
custom_icons/grabber_highlight = SubResource( 5 )
custom_icons/grabber = SubResource( 6 )
custom_styles/slider = SubResource( 7 )
custom_styles/grabber_area_highlight = SubResource( 8 )
custom_styles/grabber_area = SubResource( 9 )
min_value = -80.0
max_value = 0.0
scrollable = false
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GridContainer/MusicSlider"]
margin_left = -461.619
margin_top = -2.87019
margin_right = -144.619
margin_bottom = 42.1298
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Громкость музыки"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EffectsSlider" type="HSlider" parent="GridContainer"]
margin_top = 126.0
margin_right = 487.0
margin_bottom = 169.0
custom_icons/grabber_highlight = SubResource( 5 )
custom_icons/grabber = SubResource( 6 )
custom_styles/slider = SubResource( 7 )
custom_styles/grabber_area_highlight = SubResource( 8 )
custom_styles/grabber_area = SubResource( 9 )
min_value = -80.0
max_value = 0.0
scrollable = false
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GridContainer/EffectsSlider"]
margin_left = -461.619
margin_top = -2.87019
margin_right = -100.619
margin_bottom = 42.1298
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Громкость эффектов"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightTeamList" type="OptionButton" parent="."]
margin_left = 751.293
margin_top = 344.0
margin_right = 950.293
margin_bottom = 408.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = SubResource( 15 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="RightTeamList"]
margin_left = -237.0
margin_top = -55.0
margin_right = 132.0
margin_bottom = -10.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Цвет правой команды"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftTeamList" type="OptionButton" parent="."]
margin_left = 287.293
margin_top = 344.0
margin_right = 486.293
margin_bottom = 408.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = SubResource( 15 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LeftTeamList"]
margin_left = -237.0
margin_top = -55.0
margin_right = 132.0
margin_bottom = -10.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Цвет левой команды"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftTeamBtnBg" type="Button" parent="."]
margin_left = 47.0
margin_top = 424.0
margin_right = 486.0
margin_bottom = 504.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/normal = SubResource( 24 )
custom_fonts/font = SubResource( 21 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "Фон для левых"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftTeamIcon" type="TextureRect" parent="LeftTeamBtnBg"]
margin_left = 80.0
margin_top = 88.0
margin_right = 330.0
margin_bottom = 338.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightTeamBtnBg" type="Button" parent="."]
margin_left = 511.293
margin_top = 424.0
margin_right = 950.293
margin_bottom = 504.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/normal = SubResource( 24 )
custom_fonts/font = SubResource( 21 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "Фон для правых"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightTeamIcon" type="TextureRect" parent="RightTeamBtnBg"]
margin_left = 80.0
margin_top = 88.0
margin_right = 330.0
margin_bottom = 338.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftTeamChoose" type="FileDialog" parent="."]
margin_left = 79.0
margin_top = 96.0
margin_right = 959.0
margin_bottom = 744.0
theme = SubResource( 20 )
window_title = "!!!!!!!!!!!!!"
resizable = true
dialog_text = "Выбрать фоновое изображение для левой команды"
dialog_hide_on_ok = true
dialog_autowrap = true
mode = 0
access = 2
filters = PoolStringArray( "*.png" )
current_dir = "/"
current_path = "/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightTeamChoose" type="FileDialog" parent="."]
margin_left = 79.0
margin_top = 96.0
margin_right = 959.0
margin_bottom = 744.0
theme = SubResource( 20 )
window_title = "Открыть файл"
resizable = true
dialog_text = "Выбрать фоновое изображение для левой команды"
dialog_hide_on_ok = true
dialog_autowrap = true
mode = 0
access = 2
filters = PoolStringArray( "*.png" )
current_dir = "/"
current_path = "/"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="FullScreen" to="." method="_on_FullScreen_pressed"]
[connection signal="value_changed" from="GridContainer/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="value_changed" from="GridContainer/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="GridContainer/EffectsSlider" to="." method="_on_EffectsSlider_value_changed"]
[connection signal="item_selected" from="RightTeamList" to="." method="_on_RightTeamList_item_selected"]
[connection signal="item_selected" from="LeftTeamList" to="." method="_on_LeftTeamList_item_selected"]
[connection signal="pressed" from="LeftTeamBtnBg" to="." method="_on_LeftTeamBtnBg_pressed"]
[connection signal="pressed" from="RightTeamBtnBg" to="." method="_on_RightTeamBtnBg_pressed"]
[connection signal="file_selected" from="LeftTeamChoose" to="." method="_on_LeftTeamChoose_file_selected"]
[connection signal="file_selected" from="RightTeamChoose" to="." method="_on_RightTeamChoose_file_selected"]
